--- a/vidly/vidly.csproj
+++ b/vidly/vidly.csproj
@@ -175,6 +175,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202108231723502_InitialCreate.cs" />
+    <Compile Include="Migrations\202108231723502_InitialCreate.Designer.cs">
+      <DependentUpon>202108231723502_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202110031356138_initialModel.cs" />
+    <Compile Include="Migrations\202110031356138_initialModel.Designer.cs">
+      <DependentUpon>202110031356138_initialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -262,6 +271,14 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202108231723502_InitialCreate.resx">
+      <DependentUpon>202108231723502_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110031356138_initialModel.resx">
+      <DependentUpon>202110031356138_initialModel.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
