adding some features

--- a/vidly/vidly.csproj
+++ b/vidly/vidly.csproj
@@ -191,6 +191,14 @@
     <Compile Include="Migrations\202110031453537_AddMembershipType.Designer.cs">
       <DependentUpon>202110031453537_AddMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202110031957519_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\202110031957519_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>202110031957519_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202110032015250_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\202110032015250_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>202110032015250_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -293,6 +301,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202110031453537_AddMembershipType.resx">
       <DependentUpon>202110031453537_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110031957519_PopulateMembershipTypes.resx">
+      <DependentUpon>202110031957519_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110032015250_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>202110032015250_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
