--- a/vidly/vidly.csproj
+++ b/vidly/vidly.csproj
@@ -211,9 +211,26 @@
     <Compile Include="Migrations\202110041804021_AddBirthDate.Designer.cs">
       <DependentUpon>202110041804021_AddBirthDate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202110041938042_AddGenre.cs" />
+    <Compile Include="Migrations\202110041938042_AddGenre.Designer.cs">
+      <DependentUpon>202110041938042_AddGenre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202110041951054_Genres.cs" />
+    <Compile Include="Migrations\202110041951054_Genres.Designer.cs">
+      <DependentUpon>202110041951054_Genres.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202110042043314_InsertMovieData.cs" />
+    <Compile Include="Migrations\202110042043314_InsertMovieData.Designer.cs">
+      <DependentUpon>202110042043314_InsertMovieData.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202110042201101_moviesDetails.cs" />
+    <Compile Include="Migrations\202110042201101_moviesDetails.Designer.cs">
+      <DependentUpon>202110042201101_moviesDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
@@ -284,6 +301,7 @@
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -328,6 +346,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202110041804021_AddBirthDate.resx">
       <DependentUpon>202110041804021_AddBirthDate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110041938042_AddGenre.resx">
+      <DependentUpon>202110041938042_AddGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110041951054_Genres.resx">
+      <DependentUpon>202110041951054_Genres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110042043314_InsertMovieData.resx">
+      <DependentUpon>202110042043314_InsertMovieData.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110042201101_moviesDetails.resx">
+      <DependentUpon>202110042201101_moviesDetails.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
