Create/Edit a movie

--- a/vidly/vidly.csproj
+++ b/vidly/vidly.csproj
@@ -306,6 +306,7 @@
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
     <Content Include="Views\Movies\AddMovie.cshtml" />
+    <Content Include="Views\Movies\CustomerForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
